# CUDA-At-Scale-For-Enterprise-Final-Project-V2

./: CMakeLists.txt  Dockerfile  INSTALL  LICENSE  README.md  pull_and_run_docker_image.sh  run.sh  utils.cu  utils.cuh
.github/workflows/: cicd.yml
src/: functions.cu  functions.cuh  magnitude.cu  magnitude.h  main.cu  types.cu  types.cuh  types.h  utils.cu  utils.h
test/: Makefile  test  test.cpp  test.in
